manifests/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: hotio/sonarr
        name: sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-appdata
          mountPath: /config
      volumes:
        - name: sonarr-appdata
          persistentVolumeClaim:
            claimName: sonarr-appdata
