manifests/media/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsecrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shows.watch.cafio.co
    secretName: watch.cafio.co-tls
  rules:
  - host: shows.watch.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
